# aoc

./: README.md
2023/day_1/src/: input_test.txt  part_1.rs  part_2.rs
2023/day_2/: Cargo.toml
2023/day_2/src/: part_1.rs  part_2.rs
2023/day_3/src/: part_1.rs  part_2.rs
2023/day_4/: Cargo.toml
2023/day_4/src/: part_1.rs  part_2.rs
2023/day_5/: Cargo.toml
2023/day_5/src/: part_1.rs  part_2.rs
2024/: .gitignore
2024/day_1/: dune-project
2024/day_1/lib/: dune  files.ml  lib_1.ml  lib_2.ml
2024/day_1/test/: dune  part_1.ml  part_2.ml
2024/day_2/: day_2.opam  dune-project
2024/day_2/lib/: files.ml  lib_1.ml  lib_2.ml
2024/day_2/test/: part_1.ml  part_2.ml
2024/day_3/: dune-project
2024/day_3/lib/: dune  files.ml  lib_1.ml  lib_2.ml
2024/day_3/test/: part_1.ml  part_2.ml
2024/day_4/: dune-project
2024/day_4/lib/: dune  files.ml  lib_1.ml  lib_2.ml
2024/day_4/test/: part_1.ml  part_2.ml
