(lang dune 3.10)

(name day_3)

(generate_opam_files true)

(source
 (github sbsto/aoc))

(authors "Sam Brwonstone")

(maintainers "Sam Brownstone")

(license LICENSE)

(package
 (name day_3)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
